--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 <div class="row">
-    <div class="col l5">
+    <div class="col l5 s12">
         <textarea id="input"></textarea>
     </div>
-    <div class="col l2">
+    <div class="col l2 s12">
         <div class="input-field">
             <button class="waves-effect waves-light btn" id="format-btn">Format</button>
         </div>
@@ -27,7 +27,7 @@
             <label>Indentation unit</label>
         </div>
     </div>
-    <div class="col l5">
+    <div class="col l5 s12">
         <textarea id="output"></textarea>
     </div>
 </div>
